<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.huashui</groupId>
    <artifactId>huashui-campus-life</artifactId>
    <version>1.0.0-SNAPSHOT</version>
    <packaging>pom</packaging>

    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>3.5.0</version>
        <relativePath/>
    </parent>

    <properties>
        <java.version>17</java.version>
        <spring-cloud.version>2025.0.0</spring-cloud.version>
        <spring-cloud-alibaba.version>2025.0.0.0</spring-cloud-alibaba.version>
        <mybatis-plus.version>3.5.12</mybatis-plus.version>
        <sa-token.version>1.44.0</sa-token.version>
        <redisson.version>3.27.2</redisson.version>
        <hutool.version>5.8.26</hutool.version>
        <mapstruct.version>1.5.5.Final</mapstruct.version>
        <easyexcel.version>3.3.4</easyexcel.version>
        <knife4j.version>5.0.13</knife4j.version>
        <xxl-job.version>2.4.2</xxl-job.version>
        <minio.version>8.5.10</minio.version>
        <huashui.version>1.0.0-SNAPSHOT</huashui.version>
    </properties>

    <modules>
        <module>huashui-gateway</module>
        <module>huashui-auth</module>
        <module>huashui-user</module>
        <module>huashui-api</module>
        <module>huashui-common</module>
        <module>huashui-system</module>
        <module>huashui-storage</module>
        <module>huashui-dormitory</module>
        <module>huashui-repair</module>
        <module>huashui-utility</module>
        <module>huashui-evaluation</module>
        <module>huashui-attendance-service</module>
        <module>huashui-leave-service</module>
        <module>huashui-task</module>
        <module>huashui-message-announcement</module>
        <module>huashui-message-notification</module>
        <module>huashui-message-template</module>
        <module>huashui-job</module>
    </modules>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>org.springframework.cloud</groupId>
                <artifactId>spring-cloud-dependencies</artifactId>
                <version>${spring-cloud.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
            <dependency>
                <groupId>com.alibaba.cloud</groupId>
                <artifactId>spring-cloud-alibaba-dependencies</artifactId>
                <version>${spring-cloud-alibaba.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>

            <dependency>
                <groupId>com.baomidou</groupId>
                <artifactId>mybatis-plus-spring-boot3-starter</artifactId>
                <version>${mybatis-plus.version}</version>
            </dependency>

            <dependency>
                <groupId>cn.dev33</groupId>
                <artifactId>sa-token-spring-boot3-starter</artifactId>
                <version>${sa-token.version}</version>
            </dependency>
            <dependency>
                <groupId>cn.dev33</groupId>
                <artifactId>sa-token-reactor-spring-boot3-starter</artifactId>
                <version>${sa-token.version}</version>
            </dependency>
            <dependency>
                <groupId>cn.dev33</groupId>
                <artifactId>sa-token-jwt</artifactId>
                <version>${sa-token.version}</version>
            </dependency>
            <dependency>
                <groupId>cn.dev33</groupId>
                <artifactId>sa-token-redis-jackson</artifactId>
                <version>${sa-token.version}</version>
            </dependency>

            <dependency>
                <groupId>org.redisson</groupId>
                <artifactId>redisson-spring-boot-starter</artifactId>
                <version>${redisson.version}</version>
            </dependency>

            <dependency>
                <groupId>cn.hutool</groupId>
                <artifactId>hutool-all</artifactId>
                <version>${hutool.version}</version>
            </dependency>
            <dependency>
                <groupId>cn.hutool</groupId>
                <artifactId>hutool-captcha</artifactId>
                <version>${hutool.version}</version>
            </dependency>

            <dependency>
                <groupId>org.mapstruct</groupId>
                <artifactId>mapstruct</artifactId>
                <version>${mapstruct.version}</version>
            </dependency>

            <dependency>
                <groupId>com.alibaba</groupId>
                <artifactId>easyexcel</artifactId>
                <version>${easyexcel.version}</version>
            </dependency>


            <dependency>
                <groupId>com.baizhukui</groupId>
                <artifactId>knife4j-openapi3-jakarta-spring-boot-starter</artifactId>
                <version>${knife4j.version}</version>
            </dependency>

            <dependency>
                <groupId>com.xuxueli</groupId>
                <artifactId>xxl-job-core</artifactId>
                <version>${xxl-job.version}</version>
            </dependency>

            <dependency>
                <groupId>io.minio</groupId>
                <artifactId>minio</artifactId>
                <version>${minio.version}</version>
            </dependency>

            <dependency>
                <groupId>com.huashui</groupId>
                <artifactId>huashui-api</artifactId>
                <version>${huashui.version}</version>
            </dependency>
            <dependency>
                <groupId>com.huashui</groupId>
                <artifactId>huashui-common</artifactId>
                <version>${huashui.version}</version>
            </dependency>
        </dependencies>
    </dependencyManagement>
</project>
